# Zn-multiplication

./: .gitignore  Makefile  README.md
cleartext_impl/src/include/: mul_cleartext.h
cleartext_impl/src/lib/: mul_cleartext.c
cleartext_impl/tests/: full_64b_mul_cleartext_1.c  half_64b_mul_cleartext_1.c
harness/: generate_dataset.py  params.py  run_submission.py  utils.py  verify_result.py
implementation_0_tfhe_rs/: Cargo.toml
implementation_0_tfhe_rs/src/: he_mul.rs  lib.rs  utils.rs
measurements/single/: results-1.json  results-2.json  results-3.json  results.json
measurements/small/: results-1.json  results-2.json  results-3.json
plaintext_impl/src/include/: mul_plaintext.h
plaintext_impl/src/lib/: mul_plaintext.c
plaintext_impl/tests/: full_64b_mul_plaintext_1.c  half_64b_mul_plaintext_1.c
scripts/: build_task_implementation_0_tfhe_rs.sh  build_task_submission.sh
submission/: Cargo.toml  README.md
submission/src/: he_mul.rs  lib.rs  utils.rs
