[package]
name = "implementation_0_tfhe_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3"
serde = "1"
tfhe = { version = "~1.1.3", features = ["integer"] }
rand = { version = "0.9.1" }

[[bin]]
name = "half_cipher_cipher_64"

[[bin]]
name = "half_cipher_cleartext_64"

[[bin]]
name = "full_cipher_cipher_64"

[[bin]]
name = "full_cipher_cleartext_64"

[[bin]]
name = "run_gen_keys"

[[bin]]
name = "encode_encrypt"

[[bin]]
name = "run_h_mul"

[[bin]]
name = "decrypt_decode"
