[package]
name = "zn_multiplication"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3"
serde = "1"
tfhe = { version = "~1.1.3", features = ["integer"] }
rand = { version = "0.9.1" }

[[bin]]
name = "client_key_generation"

[[bin]]
name = "client_preprocess_input"

[[bin]]
name = "client_encode_encrypt_input"

[[bin]]
name = "server_encrypted_compute"

[[bin]]
name = "client_decrypt_decode"

[[bin]]
name = "client_postprocess"
